[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-chatterbox"
version = "1.0.0"
description = "Model Context Protocol server for Chatterbox TTS with quantized model support"
authors = [
    {name = "Zach Norris", email = "znorris@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "chatterbox-tts>=0.1.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "starlette>=0.27.0",
    "sse-starlette>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/znorris/mcp-chatterbox"
Repository = "https://github.com/znorris/mcp-chatterbox.git"
Issues = "https://github.com/znorris/mcp-chatterbox/issues"

[project.scripts]
mcp-chatterbox = "mcp_server:main"

[tool.setuptools]
py-modules = ["mcp_server"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true